XP-2453 Detail panel - Active widget not selected when going to floating mode * Use a promise when fetching widgets for the detail panel in floating mode so that its active widget is correctly set * Use the same top alignment of the floating detail panel as in docked mode

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/detail/details-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/detail/details-panel.less
@@ -275,6 +275,7 @@
   &.floating-details-panel {
 
     position: fixed;
+    top: 44px;
 
     .widget-selector {
       position: absolute;
